<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crop_bottom_bar_background"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/crop_ratio_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:padding="10dp"
            android:textColor="@color/crop_text_dark_black_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rotate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cropimage_cropratio_result_height"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/save"
            android:padding="10dp"
            android:text="@string/rotate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cropimage_cropratio_result_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textSize="16sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cropimage_cropratio_actionview_height"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/cropimage_cropratio_margin_edge"
        android:paddingRight="@dimen/cropimage_cropratio_margin_edge">

        <LinearLayout
            android:id="@+id/unspecified_ratio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/unspecified_ratio_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/crop_ic_unspecified" />

            <TextView
                android:id="@+id/unspecified_ratio_text"
                style="@style/CropMenuTitle"
                android:text="@string/freely_crop_aspect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/one_one_ratio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/one_one_ratio_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/crop_ic_one_one" />

            <TextView
                android:id="@+id/one_one_ratio_text"
                style="@style/CropMenuTitle"
                android:text="@string/one_one_crop_aspect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/three_two_ratio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/three_two_ratio_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/crop_ic_three_two" />

            <TextView
                android:id="@+id/three_two_ratio_text"
                style="@style/CropMenuTitle"
                android:text="@string/three_two_crop_aspect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/four_three_ratio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/four_three_ratio_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/crop_ic_four_three" />

            <TextView
                android:id="@+id/four_three_ratio_text"
                style="@style/CropMenuTitle"
                android:text="@string/four_three_crop_aspect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sixteen_nine_ratio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sixteen_nine_ratio_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/crop_ic_sixteen_nine" />

            <TextView
                android:id="@+id/sixteen_nine_ratio_text"
                style="@style/CropMenuTitle"
                android:text="@string/sixteen_nine_crop_aspect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/custom_ratio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/custom_ratio_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/crop_ic_custom" />

            <TextView
                android:id="@+id/custom_ratio_text"
                style="@style/CropMenuTitle"
                android:text="@string/custom_crop_aspect" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
